--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
          additional functionality it is fine to subclass or reimplement
          FlutterApplication and put your custom class here. -->
 
+    <!-- Internet Permission -->
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
