--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,8 @@ dependencies:
   cached_network_image: ^2.0.0-rc
   decimal: ^0.3.5
   font_awesome_flutter: ^8.4.0
-  esys_flutter_share: ^1.0.2
-  url_launcher: ^5.2.5
+  share: ^0.6.3+1
+  uni_links: ^0.2.0
 
 dev_dependencies:
   flutter_test:
