--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   font_awesome_flutter: ^8.4.0
   share: ^0.6.3+1
   uni_links: ^0.2.0
+  email_validator: '^1.0.0'
 
 dev_dependencies:
   flutter_test:
