--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,10 @@ dependencies:
   font_awesome_flutter: ^8.4.0
   share: ^0.6.3+1
   uni_links: ^0.2.0
-  email_validator: '^1.0.0'
+  email_validator: ^1.0.0
+  encrypt: ^3.3.1
+  shared_preferences: ^0.5.6
+  jaguar_jwt: ^2.1.6
 
 dev_dependencies:
   flutter_test:
