- list and book view refactoring - functional buttons: like, dislike, favorite and unfavorite

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   encrypt: ^3.3.1
   shared_preferences: ^0.5.6
   jaguar_jwt: ^2.1.6
+  url_launcher: ^5.4.1
 
 dev_dependencies:
   flutter_test:
