--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   shared_preferences: ^0.5.6
   jaguar_jwt: ^2.1.6
   url_launcher: ^5.4.1
+  flushbar: ^1.9.1
 
 dev_dependencies:
   flutter_test:
