--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   uni_links: ^0.2.0
   email_validator: ^1.0.0
   encrypt: ^3.3.1
-  shared_preferences: ^0.5.6
+  shared_preferences: ^0.5.3+5
   jaguar_jwt: ^2.1.6
   url_launcher: ^5.4.1
   flushbar: ^1.9.1
